--- a/model-driven-form/angular.json
+++ b/model-driven-form/angular.json
@@ -25,6 +25,7 @@
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/pretty-checkbox/dist/pretty-checkbox.min.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": []
